--- a/WPF/Project3_WPF/Project3_WPF/Project3_WPF.csproj
+++ b/WPF/Project3_WPF/Project3_WPF/Project3_WPF.csproj
@@ -56,8 +56,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="standputten_Page.xaml.cs">
-      <DependentUpon>standputten_Page.xaml</DependentUpon>
+    <Compile Include="standpunten_Page.xaml.cs">
+      <DependentUpon>standpunten_Page.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -76,7 +76,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="standputten_Page.xaml">
+    <Page Include="standpunten_Page.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
