--- a/WPF/Project3_WPF/Project3_WPF/Project3_WPF.csproj
+++ b/WPF/Project3_WPF/Project3_WPF/Project3_WPF.csproj
@@ -65,6 +65,9 @@
     <Compile Include="VerkiezingSoort_Page.xaml.cs">
       <DependentUpon>VerkiezingSoort_Page.xaml</DependentUpon>
     </Compile>
+    <Compile Include="verkiezingspartijen_Page.xaml.cs">
+      <DependentUpon>verkiezingspartijen_Page.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -91,6 +94,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="VerkiezingSoort_Page.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="verkiezingspartijen_Page.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
