Toevoeging Verkiezing Page -heeft bugs

--- a/WPF/Project3_WPF/Project3_WPF/Project3_WPF.csproj
+++ b/WPF/Project3_WPF/Project3_WPF/Project3_WPF.csproj
@@ -68,6 +68,9 @@
     <Compile Include="verkiezingspartijen_Page.xaml.cs">
       <DependentUpon>verkiezingspartijen_Page.xaml</DependentUpon>
     </Compile>
+    <Compile Include="verkiezing_Page.xaml.cs">
+      <DependentUpon>verkiezing_Page.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -98,6 +101,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="verkiezingspartijen_Page.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="verkiezing_Page.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
